RESOLVED FIXED192534
Fix stray-semicolon warning seen with a new version of clang in Xcode
https://bugs.webkit.org/show_bug.cgi?id=192534
Summary Fix stray-semicolon warning seen with a new version of clang in Xcode
Darin Adler
Reported 2018-12-08 21:13:57 PST
Fix stray-semicolon warning seen with a new version of clang in Xcode
Attachments
Patch (962 bytes, patch)
2018-12-08 21:14 PST, Darin Adler
no flags
Darin Adler
Comment 1 2018-12-08 21:14:21 PST
WebKit Commit Bot
Comment 2 2018-12-08 23:09:18 PST
Comment on attachment 356904 [details] Patch Clearing flags on attachment: 356904 Committed r239017: <https://trac.webkit.org/changeset/239017>
WebKit Commit Bot
Comment 3 2018-12-08 23:09:19 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-12-08 23:10:28 PST
Note You need to log in before you can comment on or make changes to this bug.