Fix stray-semicolon warning seen with a new version of clang in Xcode https://bugs.webkit.org/show_bug.cgi?id=192534

Reviewed by Alexey Proskuryakov.

* wtf/Lock.h: Removed an unneeded semicolon.


Canonical link: https://commits.webkit.org/207112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239017 268f45cc-cd09-0410-ab3c-d52691b4dbfc