Source/WTF/wtf/Lock.h
@@ -31,7 +31,7 @@
 
 namespace TestWebKitAPI {
 struct LockInspector;
-};
+}
 
 namespace WTF {
 
